--- a/blog/2020-07-30-vs-h5.md
+++ b/blog/2020-07-30-vs-h5.md
@@ -1,10 +1,15 @@
 ---
 id: vs
 title: H5性能对比
+author: ChenYing & LiuBojie
 ---
 
 ## 业务背景
 快影的上热门 Tab 点击进去之后的全屏播放页，起初是用 H5 实现，开发完毕之后发现 H5 的体验不太好，遂用 RN 重新实现了一遍，体验起来好很多
+
+
+<!--truncate-->
+
 
 ![](../static/img/popular.png)
 
