修改上热门播放器开发时间相关描述

--- a/blog/2020-07-30-vs-h5.md
+++ b/blog/2020-07-30-vs-h5.md
@@ -84,7 +84,7 @@ Android
 
 2. Android包大小：集成KRN之前70.3M，集成之后是72.2M，一共增量1.9M（包括JS业务包）。
 
-3. 开发时间：前端同学先用两周时间开发了 H5 版本，再用 1 周时间开发了 RN；整体花在开发上的时间差不多，但是相对来说，RN 性能好一些，节省了优化的时间；其次业务是相同的，RN 是后开发的，避免了一些坑
+3. 开发时间：前端同学开发 H5 版本耗时3周，开发RN版本耗时2周（前端开发同学在RN方面是新手，只熟悉react.js）。H5版本主要耗时在性能优化，RN 性能好一些，节省了优化的时间；其次业务是相同的，RN 是后开发的，避免了一些坑
 
 ## 测试小结
 相对于 H5，RN 的优势：
